2025-05-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Do not set `meow-mode-state-list'.

2025-05-16  Zhengyi Fu  <i@fuzy.me>

	* init.el <eshell>: Update `eshell-visual-commands' and
	`eshell-visual-subcommands'.

2025-05-15  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Bind C-x x / to `eglot-format' in `eglot-mode-map'.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui--kill-callback): Delay 4 seconds and
	send SIGKILL to the process.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-kill.el (consult-kill): Delay 4 seconds and
	send SIGKILL to the process.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Add `bufferlo'

	* packages.el:
	* init.el: Add bufferlo configuration.
	(+autoload-recursively): New function.
	(+bufferlo-consult--source-local-buffers)
	(+bufferlo-consult--source-other-buffers)
	(+bufferlo-consult--source-all-buffers): New variables.  Added to
	`consult-buffer-sources'.
	(+bufferlo-prefix-map): New keymap.  Bind to C-c z.


2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Remove activities.el

	* packages.el:
	* init.el: Remove configuration for activities.el.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (add-change-log-entry): Start a new changelog record if
	the changelog is not already modified.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Remove exwm.el

	* site-lisp/exde.el: Remove file.
	* packages.el: Remove packages needed by exwm.el.
	* init.el (+consult-firefox-filter, +consult-source-firefox): Remove variables.
	(+exwm--command-line-handler): Remove function.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (completing-read-multiple): Only define this advice when
	emacs-version < 31.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix usage of `blackout'.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-replace-state-name-list): Customize meow state indicators.

2025-05-13  Zhengyi Fu  <i@fuzy.me>

	Add `nerd-icons-grep'

	* packages.el (nerd-icons-grep): Add package `nerd-icons-grep'.